--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="mw-100 container" id="generalContainer">
+  <div class="row">
+    <div class="col-4">
+      1
+    </div>
+    <div class="col-4">
+      2
+    </div>
+    <div class="col-4">
+      3
+    </div>
+  </div>
+</div>
