--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,13 +1,17 @@
 <div class="mw-100 container" id="generalContainer">
   <div class="row">
-    <div class="col-4">
-      1
+    <div class="col-3">
+      {{jokeFromApi.text}}
     </div>
-    <div class="col-4">
-      2
+    <div class="col-3">
+      {{jokeFromApi.category}}
     </div>
-    <div class="col-4">
-      3
+    <div class="col-3">
+      {{jokeFromApi.type}}
+    </div>
+    <div class="col-3">
+      <button type="button" class="btn btn-primary btn-sm">Submit</button>
+      <button type="button" class="btn btn-secondary btn-sm" (click)="getNewJoke()">Renew</button>
     </div>
   </div>
 </div>
