--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -10,7 +10,7 @@
       {{jokeFromApi.type}}
     </div>
     <div class="col-3">
-      <button type="button" class="btn btn-primary btn-sm">Submit</button>
+      <button type="button" class="btn btn-primary btn-sm" (click)="submitJoke()">Submit</button>
       <button type="button" class="btn btn-secondary btn-sm" (click)="getNewJoke()">Renew</button>
     </div>
   </div>
